force-app/main/default/objects/Taskp__c/Taskp__c.object-meta.xml
<CustomObject>
    <label>Taskp</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Taskp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taskps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>