force-app/main/default/objects/Taskp__c/fields/project__c.field-meta.xml
<CustomField>
    <fullName>project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>project</label>
    <referenceTo>Projectp__c</referenceTo>
    <relationshipName>taskps</relationshipName>
    <type>Lookup</type>
</CustomField>