force-app/main/default/objects/Taskp__c/recordTypes/Completed.recordType-meta.xml
<RecordType>
    <fullName>Completed</fullName>
    <active>true</active>
    <label>Completed</label>
</RecordType>