force-app/main/default/objects/Taskp__c/recordTypes/In_progress.recordType-meta.xml
<RecordType>
    <fullName>In_progress</fullName>
    <active>true</active>
    <label>In progress</label>
</RecordType>