force-app/main/default/objects/Taskp__c/listViews/task_list.listView-meta.xml
<ListView>
    <fullName>task_list</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Null</value>
    </filters>
    <label>task list</label>
</ListView>